# NeuroSciDL

./: .gitignore  README.md  pyproject.toml
src/: callbacks.py  dataset.py  model.py  transforms.py
src/examples/: CV_train.py  ViT2EEG_train.py  ViT2EEG_train_base.py  ViT2EEG_train_cli.py  ViT2EEG_train_script_legacy.py  ViT2EEG_train_script_simple.py  base_config.yaml  base_finetune_config.yaml  base_ft_schedule.yaml  base_ft_schedule_gen.yaml
src/neuroscidl/: callbacks.py  eeg_dataset.py
src/neuroscidl/eeg/: annotator.py  augmentor.py  eeg_dataset.py  eeg_model.py  transforms.py  utils.py
src/pytorch_boilerplate/: dataset.py  transforms.py
