[project]
name = "NeuroSciDL"
description = "A DeepLearning framework for EEG data."
authors = [
    { name = "Arjun Bingly", email = "arjunbin@gmail.com" },
]
version = '0.0.1'
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "lightning[pytoch-extra]>=2.4",
    "torch>=2.5",
    "torchvision>=0.20",
    "torchaudio>=2.5",
    "torchinfo>=1.8",
    "numpy>=2",
    "pandas>=2",
    "tabulate>=0.8",
    "mne>=1.9",
    "transformers>=4.46.3",
    "tqdm>=4.67",
    "tabulate>=0.9",
    "notifiers>=1.3",
    "pillow>=11",
    "omegaconf>=2.3",
    "jsonargparse[signatures] >=4.27.7",
    "mlflow>=2.18",
]
